--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ opencv-python==4.9.0.80
 pandas==1.4.4
 scikit-learn 1.0.2 @ file:///C:/ci/scikit-learn_1642617276183/work
 tensorflow==2.16.1
+python== 3.9.18
